--- a/src/CongnitiveEye.Forms/Views/LoginView.xaml
+++ b/src/CongnitiveEye.Forms/Views/LoginView.xaml
@@ -1,6 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<ContentPage xmlns="http://xamarin.com/schemas/2014/forms" xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml" x:Class="CongnitiveEye.Forms.Views.LoginView">
+<ContentPage
+    xmlns="http://xamarin.com/schemas/2014/forms"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:vm="clr-namespace:CongnitiveEye.Forms.ViewModels"
+    x:Class="CongnitiveEye.Forms.Views.LoginView">
+
+    <ContentPage.BindingContext>
+        <vm:LoginViewModel />
+    </ContentPage.BindingContext>
+    
     <ContentPage.Content>
-        <Label Text="Welcome to Xamarin Forms!" VerticalOptions="Center" HorizontalOptions="Center" />
+        <StackLayout
+            VerticalOptions="Center"
+            Margin="20">
+            <Entry
+                Placeholder="Training Key"
+                Text="{Binding TrainingKey}" />
+            <Entry
+                Placeholder="Prediction Key"
+                Text="{Binding PredictionKey}" />
+            
+            <Button Text="Log my in" Command="{Binding LoginCommand}" />
+            
+        </StackLayout>
     </ContentPage.Content>
+    
 </ContentPage>
