--- a/src/CongnitiveEye.Forms/Views/ProjectImageView.xaml
+++ b/src/CongnitiveEye.Forms/Views/ProjectImageView.xaml
@@ -3,13 +3,10 @@
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:VMs="clr-namespace:CongnitiveEye.Forms.ViewModels"
     xmlns:Views="clr-namespace:CongnitiveEye.Forms.Views"
+    xmlns:Util="clr-namespace:CongnitiveEye.Forms.Utilities"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     x:Class="CongnitiveEye.Forms.Views.ProjectImageView"
-    BackgroundColor="#DADFE1" >
-
-    <ContentPage.ToolbarItems>
-        <ToolbarItem Text="Try Again" />
-    </ContentPage.ToolbarItems>
+    BackgroundColor="{x:Static Util:ColorUtil.SecondaryColor}" >
     
     <ContentPage.Content>
         <Grid>
@@ -21,12 +18,13 @@
             </Grid.RowDefinitions>
             
             <Frame Grid.Row="0"
-                Margin="10"
-                Padding="5">
+                BackgroundColor="{x:Static Util:ColorUtil.PrimaryColor}"
+                Margin="20"
+                Padding="10">
 
                 <!--Project Image-->
                 <Grid
-                    BackgroundColor="Gray"
+                    BackgroundColor="{x:Static Util:ColorUtil.SecondaryColor}"
                     Padding="1">
                     <Image
                         VerticalOptions="Fill"
@@ -39,26 +37,34 @@
                
             </Frame>
 
-            <StackLayout Grid.Row="1"
-                         Spacing="20"
-                         HorizontalOptions="Center"
-                         VerticalOptions="Center"
-                         Orientation="Horizontal">
+            <Grid Grid.Row="1"
+                Margin="20,0"
+                HorizontalOptions="Fill"
+                VerticalOptions="Center">
                 
-                <Picker WidthRequest="200"
-                        ItemsSource="{Binding Tags}"
-                        ItemDisplayBinding="{Binding Name}"
-                        SelectedItem="{Binding SelectedTag}"/>
-                
-                <Button IsVisible="{Binding IsDirty}"
-                        Text="Save"
-                        Command="{Binding SaveTag}" />
-            </StackLayout>
+                <Picker
+                    HeightRequest="45"
+                    Title="Tag"
+                    WidthRequest="200"
+                    ItemsSource="{Binding Tags}"
+                    ItemDisplayBinding="{Binding Name}"
+                    SelectedItem="{Binding SelectedTag}"/>
+                <Image
+                    Margin="15,0"
+                    WidthRequest="20"
+                    InputTransparent="true"
+                    Source="chevron_down.png"  
+                    HorizontalOptions="End"
+                    VerticalOptions="Center" />
+               
+            </Grid>
 
             <Button
+                HeightRequest="45"
+                BackgroundColor="{x:Static Util:ColorUtil.AlertColor}"
                 Grid.Row="2"
-                Margin="10"
-                TextColor="Red"
+                Margin="20, 0, 20, 30"
+                TextColor="White"
                 Text="Remove Picture"
                 Command="{Binding RemoveImage}" />
         </Grid>
