--- a/src/CongnitiveEye.Forms/Views/ProjectIterationsView.xaml
+++ b/src/CongnitiveEye.Forms/Views/ProjectIterationsView.xaml
@@ -3,16 +3,17 @@
     xmlns="http://xamarin.com/schemas/2014/forms"
     xmlns:VMs="clr-namespace:CongnitiveEye.Forms.ViewModels"
     xmlns:Views="clr-namespace:CongnitiveEye.Forms.Views"
+    xmlns:Util="clr-namespace:CongnitiveEye.Forms.Utilities"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     x:Class="CongnitiveEye.Forms.Views.ProjectIterationsView"
-    BackgroundColor="#DADFE1">
+    BackgroundColor="{x:Static Util:ColorUtil.SecondaryColor}">
 
      <ContentPage.ToolbarItems>
         <ToolbarItem Text="Test Model" Command="{Binding TestModel}" />
     </ContentPage.ToolbarItems>
     
     <ContentPage.Content>
-        <Grid>
+        <Grid Margin="10">
 
             
             <Grid.RowDefinitions>
@@ -21,32 +22,43 @@
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
 
-            <StackLayout Grid.Row="0"
-                         Spacing="20"
-                         Margin="20"
-                         HorizontalOptions="Center"
-                         VerticalOptions="Center"
-                         Orientation="Horizontal">
+            <Grid Grid.Row="0"
+                  Margin="0, 20"
+                  ColumnSpacing="20"
+                  HorizontalOptions="Fill"
+                  VerticalOptions="Center">
                 
-                <Picker WidthRequest="200"
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="Auto" />
+                </Grid.ColumnDefinitions>
+                
+                <Picker HeightRequest="45"
+                        HorizontalOptions="Fill"
                         ItemsSource="{Binding Iterations}"
                         ItemDisplayBinding="{Binding Name}"
                         SelectedItem="{Binding SelectedIteration}"/>
                 
-                <Button
+                <Button Grid.Column="1"
+                        WidthRequest="100"
+                        HeightRequest="45"
+                        BackgroundColor="{x:Static Util:ColorUtil.PrimaryColor}"
+                        TextColor="White"
                         Text="Re-Train"
                         Command="{Binding ReTrain}" />
-            </StackLayout>
+            </Grid>
             
             
             <Frame Grid.Row="1"
-                Margin="10"
-                Padding="5">
+                   BackgroundColor="{x:Static Util:ColorUtil.PrimaryColor}"
+                   Margin="0"
+                   Padding="5">
 
                 <!--Project Image-->
                 <Grid
-                    BackgroundColor="Gray"
+                    BackgroundColor="{x:Static Util:ColorUtil.SecondaryColor}"
                     Padding="1">
+                    
                     <Image
                         VerticalOptions="Fill"
                         BackgroundColor="Black"
@@ -64,13 +76,12 @@
                          VerticalOptions="Center"
                          Orientation="Horizontal">
                 
-                <Label
-                    HorizontalOptions="Center"
-                    Text="{Binding ResultsMessage}"
-                    HorizontalTextAlignment="Center"
-                    FontSize="22"
-                    FontAttributes="Bold"
-                    LineBreakMode="WordWrap" />
+                <Label  HorizontalOptions="Center"
+                        Text="{Binding ResultsMessage}"
+                        HorizontalTextAlignment="Center"
+                        FontSize="22"
+                        FontAttributes="Bold"
+                        LineBreakMode="WordWrap" />
               
             </StackLayout>
 
