--- a/src/CongnitiveEye.Forms/Views/ProjectImageView.xaml
+++ b/src/CongnitiveEye.Forms/Views/ProjectImageView.xaml
@@ -48,6 +48,7 @@
                     WidthRequest="200"
                     ItemsSource="{Binding Tags}"
                     ItemDisplayBinding="{Binding Name}"
+                    Unfocused="TagPicker_Unfocused"
                     SelectedItem="{Binding SelectedTag}"/>
                 
                 <Image
